[package]
name = "md_sns"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenvy = "0.15.6"
gloo = "0.8.0"
gloo-net = "0.2.6"
gloo-storage = "0.2.2"
pulldown-cmark = "0.9.2"
reqwest = { version = "0.11.14", features = ["json"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
serde_json = "1.0.89"
serde = { version = "1.0", features = ["derive"] }

