[package]
name = "markdown2html"
version = "0.1.0"
edition = "2021"
authors = ["t3mp <t3mp@duck.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = "4"
pulldown-cmark = "0.9.1"
#clap = { version = "3.0.5", features = ["derive"] }
html-minifier = "3.0.7"
easy-scraper = "0.2.0"
html-escape = "0.2.3"
#notify = "5.0.0"
#futures = "0.3.21"
log = "0.4.17"
env_logger = "0.10.0"
